--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,7 @@ img {
 }
 .home__social-icon:hover {
   color: var(--first-color);
+  transform: scale(1.3);
 }
 .home__img {
   position: absolute;
@@ -407,8 +408,8 @@ textarea {
   color: #fff;
   margin: 0 var(--mb-2);
 }
-.footer__icon:hover {
-  transform: scale(1.1);
+.footer__icons:hover {
+  transform: scale(1.3);
 }
 
 /*MEDIA QUERIES FOR RESPONSIVENESS*/
