--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,9 @@ img {
 .skills__icon.vercel {
   color: black;
 }
+.skills__icon.vs-code {
+  color: rgb(0, 122, 204);
+}
 .skills__names {
   display: flex;
   align-items: center;
@@ -377,8 +380,12 @@ img {
   background-color: rgb(203, 0, 0);
 }
 .skills__vercel {
-  width: 50%;
+  width: 60%;
   background-color: black;
+}
+.skills__vs-code {
+  width: 80%;
+  background-color: rgb(0, 122, 204);
 }
 .skills__img {
   border-radius: 0.5rem;
