--- a/styles.css
+++ b/styles.css
@@ -406,11 +406,11 @@ img {
 .work__img img {
   transition: 1s;
   cursor: pointer;
+  max-width: 100%;
 }
 .work__img img:hover {
   transform: scale(1.1);
 }
-
 /*CONTACT SECTION*/
 .contact__input {
   width: 100%;
