--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
   --mb-1: 0.5rem;
   --mb-2: 1rem;
   --mb-3: 1.5rem;
-  --mb-4: 2rem;
+  --mb-4: 3rem;
   --mb-5: 2.5rem;
   --mb-6: 3rem;
 }
@@ -94,6 +94,7 @@ img {
   left: 0;
   right: 0;
   margin: auto;
+  margin-bottom: var(--mb-2);
   top: 2rem;
   background-color: var(--first-color);
 }
